exports[`Heading has correct default options 1`] = `
<h1
  className="grommetux-heading"
  dangerouslySetInnerHTML={undefined}
  id={undefined}>
  Testing
</h1>
`;

exports[`Heading has correct margin="small" and className rendering 1`] = `
<h1
  className="grommetux-heading grommetux-heading--margin-small testing"
  dangerouslySetInnerHTML={undefined}
  id={undefined}>
  Testing
</h1>
`;

exports[`Heading has correct size="large" and uppercase=true rendering 1`] = `
<h1
  className="grommetux-heading grommetux-heading--large grommetux-heading--uppercase"
  dangerouslySetInnerHTML={undefined}
  id={undefined}>
  Testing
</h1>
`;

exports[`Heading has correct strong=true and align="center" rendering 1`] = `
<h1
  className="grommetux-heading grommetux-heading--strong grommetux-heading--align-center"
  dangerouslySetInnerHTML={undefined}
  id={undefined}>
  Testing
</h1>
`;
